css fixes to prevent task boards from overflowing

--- a/packages/app/styles/globals.less
+++ b/packages/app/styles/globals.less
@@ -201,13 +201,17 @@ textarea {
   cursor: pointer;
 }
 
+// prevent task board overflow
+.ant-tabs-content {
+  max-height: 100%;
+}
+
 .dewo-task-board {
+  height: 100%;
   overflow-x: auto;
 
   padding: 24px;
   padding-top: 0;
-
-  height: 100%;
 
   // TODO(fant): rework these hacks
   & > .ant-space {
